--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -52,6 +52,11 @@ flutter:
   - assets/6.jpg
   - assets/7.jpg
 
+  fonts: 
+    - family: Prompt
+      fonts: 
+        - asset: assets/fonts/Prompt-Regular.ttf
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
