--- a/gym_app/ios/Runner/Info.plist
+++ b/gym_app/ios/Runner/Info.plist
@@ -41,5 +41,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<!-- Copied from GoogleServices-Info.plist key REVERSED_CLIENT_ID -->
+				<string>com.googleusercontent.apps.870131841868-r2a40qpjij8ea2trgniciqilf7s94ubo</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
