--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -17,20 +17,20 @@ dependencies:
   flutter:
     sdk: flutter
   
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_database: ^1.0.4
   firebase_core: any
+  firebase_auth: ^0.5.9
   connectivity:
-  dio:
-  path_provider:
+  
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 
 # For information on the generic Dart part of this file, see the
