--- a/gym_app/android/app/build.gradle
+++ b/gym_app/android/app/build.gradle
@@ -61,3 +61,5 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
