--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -21,9 +21,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_database: ^1.0.4
-  firebase_core: any
-  firebase_auth: ^0.5.9
-  connectivity:
+  firebase_core: ^0.2.5
+  firebase_auth: ^0.5.2
+  connectivity: ^0.3.2
   http: '>=0.11.3+12'
   shared_preferences: ^0.4.3
   
