--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   connectivity: ^0.3.2
   http: '>=0.11.3+12'
   shared_preferences: ^0.4.3
+  autocomplete_textfield: ^1.4.1
   
   
 
