--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_database: ^1.0.4
   firebase_core: ^0.2.5
   firebase_auth: ^0.5.2
+  firebase_storage: ^1.0.4
   connectivity: ^0.3.2
   http: '>=0.11.3+12'
   shared_preferences: ^0.4.3
