--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: '>=0.11.3+12'
   shared_preferences: ^0.4.3
   autocomplete_textfield: ^1.4.1
+  datetime_picker_formfield: ^0.1.7
 
 dev_dependencies:
   flutter_test:
