--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^0.4.3
   autocomplete_textfield: ^1.4.1
   datetime_picker_formfield: ^0.1.7
+  rich_alert: ^0.1.32
 
 dev_dependencies:
   flutter_test:
