--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -20,16 +20,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_database: ^1.0.4
-  firebase_core: ^0.2.5
-  firebase_auth: ^0.5.2
-  firebase_storage: ^1.0.4
+  firebase_database: ^3.1.3
+  firebase_core: ^0.4.4
+  firebase_auth: ^0.16.0
+  firebase_storage: ^3.1.5
   connectivity: ^0.3.2
   http: '>=0.11.3+12'
   shared_preferences: ^0.4.3
   autocomplete_textfield: ^1.4.1
   datetime_picker_formfield: ^0.1.7
   rich_alert: ^0.1.32
+  flutter_svg: ^0.17.4
+  flip_card: ^0.4.4
 
 dev_dependencies:
   flutter_test:
@@ -66,11 +68,11 @@ flutter:
   - assets/JSON/gymapp-e8453-export.json
   - assets/JSON/testingLocal.json
   - assets/JSON/ExerciseDB.json
-  - assets/MyClients.png
-  - assets/SessionPlanner.png
   - assets/ExerciseList.jpg
   - assets/diary.svg
   - assets/gym.svg
+  - assets/name.svg
+  - assets/contact.svg
 
 
   fonts: 
