--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   rich_alert: ^0.1.32
   flutter_svg: ^0.17.4
   flip_card: ^0.4.4
-  rflutter_alert: ^1.0.3
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -57,19 +57,9 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets: 
-  - assets/1.jpg
-  - assets/2.jpg
-  - assets/3.jpg
-  - assets/4.jpg
-  - assets/5.jpg
-  - assets/6.jpg
-  - assets/7.jpg
-  - assets/MyWorkouts.jpg
-  - assets/MySessions.jpg
   - assets/JSON/gymapp-e8453-export.json
   - assets/JSON/testingLocal.json
   - assets/JSON/ExerciseDB.json
-  - assets/ExerciseList.jpg
   - assets/diary.svg
   - assets/gym.svg
   - assets/name.svg
@@ -83,6 +73,7 @@ flutter:
   - assets/6.svg
   - assets/weightlifter.svg
   - assets/finance.svg
+  - assets/closed.svg
 
 
   fonts: 
