--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -28,11 +28,12 @@ dependencies:
   http: '>=0.11.3+12'
   shared_preferences: ^0.4.3
   autocomplete_textfield: ^1.4.1
-  datetime_picker_formfield: ^0.1.7
+  datetime_picker_formfield: ^1.0.0
   rich_alert: ^0.1.32
   flutter_svg: ^0.17.4
   flip_card: ^0.4.4
   carousel_pro: ^1.0.0
+  rflutter_alert: ^1.0.3
 
 dev_dependencies:
   flutter_test:
