--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_svg: ^0.17.4
   flip_card: ^0.4.4
   rflutter_alert: ^1.0.3
+  toggle_switch: ^0.1.4
 
 dev_dependencies:
   flutter_test:
