--- a/gym_app/pubspec.yaml
+++ b/gym_app/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flip_card: ^0.4.4
   rflutter_alert: ^1.0.3
   toggle_switch: ^0.1.4
+  calendar_strip: ^1.0.6
+  table_calendar: ^2.2.3
 
 dev_dependencies:
   flutter_test:
